--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
 
         <div class="row mx-0 g-5 justify-content-center overflow-hidden">
           <div class="card mx-5 px-0" style="width: 18rem;">
-            <img src="/card amed.jpg" class="card-img-top" alt="...">
+            <img src="card amed.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5>Amed</h5>
               <p class="card-text">Amed is a stunning location with some amazing diving, there is the popular dive site where all the man made pyramids have been constructed, giving life and shelter to so many fish species in the area.</p>
             </div>
           </div>
           <div class="card px-0" style="width: 18rem;">
-            <img src="/card tulamben.jpg" class="card-img-top" alt="...">
+            <img src="card tulamben.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5>Tulamben</h5>
               <p class="card-text">Tulamben is the home of the amazing USAT Liberty Ship wreck the wreck sits in 3m – 28m of water and is a perfect dive for all levels. There is also some amazing other dive sites, Drop Off and coral Garden</p>
             </div>
           </div>
           <div class="card mx-5 px-0" style="width: 18rem;">
-            <img src="/card dive courses.jpg" class="card-img-top" alt="...">
+            <img src="card dive courses.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5>Dive Courses</h5>
               <p class="card-text">From the Beginners diving courses, all the way to Dive Pro. Check out how you can learn new skills and have great dives at the same time.</p>
@@ -230,52 +230,52 @@
         <div class="row g-3 mt-3 mb-5">
             <!-- Repeat this column for each image -->
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/1.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="1.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/2.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="2.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/3.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="3.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/4.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="4.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/5.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="5.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/6.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="6.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/7.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="7.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/8.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="8.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/9.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="9.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/10.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="10.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/11.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="11.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/12.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="12.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/13.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="13.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/15.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="15.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/16.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="16.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <img src="/17.jpg" alt="Scuba Image" class="img-fluid gallery-img">
+                <img src="17.jpg" alt="Scuba Image" class="img-fluid gallery-img">
             </div>
             <!-- Add more images as needed -->
         </div>
